// Transactions
syntax = "proto3";
option java_package = "com.wavesplatform.transaction.protobuf";
import "scalapb/scalapb.proto";
import "scripts.proto";
import "address.proto";

option (scalapb.options) = {
    import: "com.wavesplatform.serialization.protobuf.utils._"
};

message XXAmount {
    option (scalapb.message).companion_extends = "com.wavesplatform.transaction.protobuf.PBXXAmountCompanionBase";

    message AssetAmount {
        bytes assetId = 1 [(scalapb.field).type = "com.wavesplatform.transaction.protobuf.AssetId"];
        int64 amount = 2;
    }

    oneof amount {
        int64 wavesAmount = 1;
        AssetAmount assetAmount = 2;
    }
}

message SignedTransaction {
    option (scalapb.message).extends = "com.wavesplatform.transaction.protobuf.PBSignedTransactionBase";
    option (scalapb.message).companion_extends = "com.wavesplatform.transaction.protobuf.PBSignedTransactionCompanionBase";

    Transaction transaction = 1 [(scalapb.field).no_box = true];
    repeated bytes proofs = 2 [(scalapb.field).type = "com.wavesplatform.common.state.ByteStr"];
}

message Transaction {
    option (scalapb.message).extends = "com.wavesplatform.transaction.protobuf.PBTransactionBase";
    option (scalapb.message).companion_extends = "com.wavesplatform.transaction.protobuf.PBTransactionCompanionBase";

    bytes chainId = 1 [(scalapb.field).type = "com.wavesplatform.transaction.protobuf.ChainId"];
    bytes senderPublicKey = 2 [(scalapb.field).type = "com.wavesplatform.account.PublicKeyAccount"];
    XXAmount fee = 3 [(scalapb.field).no_box = true];
    int64 timestamp = 4;
    int32 version = 5;

    oneof data {
        GenesisTransactionData genesis = 101;
        PaymentTransactionData payment = 102;
        IssueTransactionData issue = 103;
        TransferTransactionData transfer = 104;
        ReissueTransactionData reissue = 105;
        BurnTransactionData burn = 106;
        ExchangeTransactionData exchange = 107;
        LeaseTransactionData lease = 108;
        LeaseCancelTransactionData leaseCancel = 109;
        CreateAliasTransactionData createAlias = 110;
        MassTransferTransactionData massTransfer = 111;
        DataTransactionData dataTransaction = 112;
        SetScriptTransactionData setScript = 113;
        SponsorFeeTransactionData sponsorFee = 114;
        SetAssetScriptTransactionData setAssetScript = 115;
        // TODO: 116 = contract invocation
    };
};

message GenesisTransactionData {
    bytes recipientAddress = 1 [(scalapb.field).type = "com.wavesplatform.account.Address"];
    int64 amount = 2;
};

message PaymentTransactionData {
    bytes address = 1 [(scalapb.field).type = "com.wavesplatform.account.Address"];
    int64 amount = 2;
};

message TransferTransactionData {
    Recipient recipient = 1 [(scalapb.field).no_box = true];
    XXAmount amount = 2 [(scalapb.field).no_box = true];
    bytes attachment = 3 [(scalapb.field).type = "com.wavesplatform.common.state.ByteStr"];
};

message CreateAliasTransactionData {
    string alias = 1;
};

message DataTransactionData {
    message DataEntry {
        string key = 1;
        oneof value {
            int64 intValue = 10;
            bool boolValue = 11;
            bytes binaryValue = 12 [(scalapb.field).type = "com.wavesplatform.common.state.ByteStr"];
            string stringValue = 13;
        };
    };

    repeated DataEntry data = 1;
};

message MassTransferTransactionData {
    message Transfer {
        Recipient address = 1 [(scalapb.field).no_box = true];
        int64 amount = 2;
    };

    bytes assetId = 1 [(scalapb.field).type = "com.wavesplatform.transaction.protobuf.AssetId"];
    repeated Transfer transfers = 2;
    bytes attachment = 3 [(scalapb.field).type = "com.wavesplatform.common.state.ByteStr"];
};

message LeaseTransactionData {
    Recipient recipient = 1 [(scalapb.field).no_box = true];
    int64 amount = 2;
};

message LeaseCancelTransactionData {
    bytes leaseId = 1 [(scalapb.field).type = "com.wavesplatform.common.state.ByteStr"];
};

message BurnTransactionData {
    XXAmount.AssetAmount assetAmount = 1 [(scalapb.field).no_box = true];
};

message IssueTransactionData {
    bytes name = 1 [(scalapb.field).type = "com.wavesplatform.common.state.ByteStr"];
    bytes description = 2 [(scalapb.field).type = "com.wavesplatform.common.state.ByteStr"];
    int64 amount = 3;
    int32 decimals = 4;
    bool reissuable = 5;
    Script script = 6 [(scalapb.field).type = "com.wavesplatform.transaction.smart.script.Script"];
};


message ReissueTransactionData {
    XXAmount.AssetAmount assetAmount = 1 [(scalapb.field).no_box = true];
    bool reissuable = 2;
};

message SetAssetScriptTransactionData {
    bytes assetId = 1 [(scalapb.field).type = "com.wavesplatform.transaction.protobuf.AssetId"];
    Script script = 2 [(scalapb.field).type = "com.wavesplatform.transaction.smart.script.Script"];
};

message SetScriptTransactionData {
    Script script = 2 [(scalapb.field).type = "com.wavesplatform.transaction.smart.script.Script"];
};

message ExchangeTransactionData {
    message Order {
        enum Type {
            BUY = 0;
            SELL = 1;
        };

        message AssetPair {
            bytes amountAssetId = 1 [(scalapb.field).type = "com.wavesplatform.transaction.protobuf.AssetId"];
            bytes priceAssetId = 2 [(scalapb.field).type = "com.wavesplatform.transaction.protobuf.AssetId"];
        };

        bytes senderPublicKey = 1 [(scalapb.field).type = "com.wavesplatform.account.PublicKeyAccount"];
        bytes matcherPublicKey = 2 [(scalapb.field).type = "com.wavesplatform.account.PublicKeyAccount"];
        AssetPair assetPair = 3;
        Type orderType = 4;
        int64 amount = 5;
        int64 price = 6;
        int64 timestamp = 7;
        int64 expiration = 8;
        int64 matcherFee = 9;
        repeated bytes proofs = 10 [(scalapb.field).type = "com.wavesplatform.common.state.ByteStr"];
        int64 version = 11;
    };

    Order submittedOrder = 1;
    Order counterOrder = 2;
    int64 amount = 3;
    int64 price = 4;
    int64 buyMatcherFee = 5;
    int64 sellMatcherFee = 6;
};

message SponsorFeeTransactionData {
    XXAmount.AssetAmount minFee = 1 [(scalapb.field).no_box = true];
};